--- a/templates/back_office/admin_commande_form.html.twig
+++ b/templates/back_office/admin_commande_form.html.twig
@@ -8,7 +8,7 @@
     <div class="card text-center my-5 col-10 mx-auto border-secondary">
         <div class="card-header border-secondary"><h1 class="h4 text-center m-2">Modification de l'état de la commande n°{{commande.id}}</h1> </div>
         <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
+            <h5 class="card-title">Toute les informations de la commande</h5>
             <div class="d-flex justify-content-around my-3">
                 <p class="card-text">Date de la commande :</p>
                 <p class="card-text">Le {{ commande.date|date("d/m/Y") }} à {{commande.date|date('H:i:s') }} </p>
@@ -19,7 +19,11 @@
             </div>
             <div class="d-flex justify-content-around my-3">
                 <p class="card-text my-auto">Infos Article :</p>
-                <p class="card-text">{{ commande.detailCommande.article.titre }} <br> Au prix de {{ commande.detailCommande.prix }} € / article <br>Il en reste {{ commande.detailCommande.article.stock }} pièces</p>
+                    {% for det in detailCommande %}
+                        {% if commande.id == det.commande.id %}
+                            <p class="card-text">{{ det.article.titre }} <br> Au prix de {{ det.prix }} € / article <br>Il en reste {{ det.article.stock }} pièces</p>
+                        {% endif %}
+                    {% endfor %}
             </div>
             <div class="d-flex justify-content-around my-3 col-12">
                 <div class="card-text my-auto col-3">Etat de la commande :</div>
