--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,12 +54,13 @@
             <div class="pb-3">
                 <ul class="nav justify-content-center border-bottom mb-3">
                     <li class="nav-link nav-link-ltr"><a href="{{ path('home') }}" class="nav-link px-2 me-2 text-white"><img src="{{ asset('uploads/photos/logo_small_icon_only_inverted.png') }}" alt="logo" style="height: 30px;"></a></li>
-                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">About</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('app_profil') }}" class="nav-link px-2 text-white">Profil</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('shop') }}" class="nav-link px-2 text-white">Shop</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">Mentions légales</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">FaQ</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="#" class="nav-link px-2 text-white">Contact</a></li>
                 </ul>
-                <p class="text-center text-muted">© 2021 SYYR & Corp, Inc</p>
+                <p class="text-center text-muted">© 2021 ARYHA paris</p>
             </div>
         </footer>
         
