--- a/templates/registration/profil.html.twig
+++ b/templates/registration/profil.html.twig
@@ -134,9 +134,9 @@ ARYHA paris | Profil
         {% endif %}
     </div>
 
-    <div class="container text-center">
+    {# <div class="container text-center">
         Vos commandes
-    </div>
+    </div> #}
     
 
     
