--- a/templates/shop/fiche-produit.html.twig
+++ b/templates/shop/fiche-produit.html.twig
@@ -64,8 +64,8 @@
         {% endif %}
         </div>
         <p class="mx-3 my-3">Couleur : {{ article.couleur}}</p>
-        <p class="mx-3 my-3">Tailles :</p>
-        <p class="mx-3 my-3">Select les nombre</p>
+        <p class="mx-3 my-3">Tailles : <a href="" class="link-secondary">39</a> <a href="" class="link-secondary">40</a> <a href="" class="link-secondary">41</a> <a href="" class="link-secondary">42</a> <a href="" class="link-secondary">43</a> <a href="" class="link-secondary">44</a> <a href="" class="link-secondary">45</a> <a href="" class="link-secondary">46</a> <a href="" class="link-secondary">47</a> <a href="" class="link-secondary">48</a> <a href="" class="link-secondary">49</a></p>
+       
 
         <p class="text-center my-3">{{ article.description }}</p>
         <div class="d-flex justify-content-around my-5">
