--- a/templates/back_office/admin_user_form.html.twig
+++ b/templates/back_office/admin_user_form.html.twig
@@ -9,7 +9,9 @@
 {% endblock %}
 
 {% block body %}
-
+<form>
+  <input type="button" class="btn btn-outline-secondary" value="Retour" onclick="history.go(-1)">
+</form>
 <div class="ajout-article-admin rounded my-5">
     <div class="card text-center col-9 mx-auto border-success">
         <div class="card-header border-success">
