--- a/templates/back_office/admin_articles.html.twig
+++ b/templates/back_office/admin_articles.html.twig
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block body %}
-
+<form>
+  <input type="button" class="btn btn-outline-secondary" value="Retour" onclick="history.go(-1)">
+</form>
     <h1 class="text-center my-5">Liste des articles</h1>
 
     {% for message in app.flashes('success') %}
@@ -25,6 +27,7 @@
                     {% endif %}
                     
                 {% endfor %}
+                <th class="text-center">Taille | Stock</th>
                 <th class="text-center">Catégorie</th>
                 <th class="text-center">Action</th>
             </tr>
@@ -32,9 +35,8 @@
 
         <tbody>        
             {% for data in cellules %} 
-
                 {% if data != 'id' %}
-                    <tr>
+                <tr>
                     <td> <a  href="" class="link-secondary">{{ data.titre|slice(0, 20)|striptags }} </a></td>
                     <td> {{ data.description|slice(0, 50)|striptags }}[...] </td> 
                     {% if data.photo != null %}
@@ -42,17 +44,28 @@
                     {% else %}
                         <td class="text-danger text-center">Aucune photo téléchargée</td>
                     {% endif %}                    <td class="text-center"> {{ data.prix }}&nbsp;€</td>
-                    <td class="text-center"> {{ data.stock }}</td>
+                    
                     <td class="text-center"> {{ data.couleur }}</td>
+
+                    <td class="text-center">
+                        {% for tail in toutTail %}
+                            {% if data.id == tail.article.id %}
+                                {{tail.titre}} | {{tail.stock}}<br>
+                            {% endif %}
+                        {% endfor %} 
+                    </td>
 
                     <td class="text-center">{{data.category.titre}} / {{data.category.grdCat}} / {{data.category.sexe}}</td>
                     
-                    <td><div class="d-flex nowrap">
-                            <a href="{{ path('app_admin_articles_delete', {'id': data.id}) }}" class="btn bg-danger text-white me-1" onclick="return(confirm('Etes-vous sur de vouloir supprimer cet article : {{ data.titre }}' ))"><i class="bi bi-trash"></i></a>
-                            <a href="{{ path('app_admin_articles_update', {'id': data.id}) }}" class="btn bg-success text-white"><i class="bi bi-pencil-square"></i>
+                    <td>
+                    
+                        <div class="text-center">
+                            <a href="{{ path('app_admin_articles_delete', {'id': data.id}) }}" class="btn bg-danger text-white" onclick="return(confirm('Etes-vous sur de vouloir supprimer cet article : {{ data.titre }}' ))"><i class="bi bi-trash"></i></a>
+                            <a href="{{ path('app_admin_articles_update', {'id': data.id}) }}" class="btn bg-success text-white my-1"><i class="bi bi-pencil-square"></i></a>
                         <div>
+                            <a href="{{ path('app_admin_taille', {'id': data.id}) }}" class="btn bg-warning text-white"><i class="bi bi-plus-slash-minus"></i></a>
                     </td>
-                    </tr>          
+                </tr>          
                 {% endif %}  
             {% endfor %}
         </tbody>
