--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -59,13 +59,13 @@
   
     
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="{{ path('shop') }}">ARYHA paris</a>
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 hoverred" href="{{ path('shop') }}">ARYHA paris</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
-      <a class="nav-link px-3 text-danger" href="{{ path('app_logout') }}">Deconnexion</a>
+      <a class="nav-link px-3 text-danger borderred" href="{{ path('app_logout') }}">Deconnexion</a>
     </div>
   </div>
 </header>
@@ -77,31 +77,31 @@
         {% set route_name = app.request.attributes.get('_route') %}
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin' %} active {% endif %}" aria-current="page" href="{{ path('app_admin') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin' %} active {% endif %}" aria-current="page" href="{{ path('app_admin') }}">
             <i class="bi bi-house-door-fill"></i>
             &nbsp;Accueil
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin_articles' %} active {% endif %}" href="{{ path('app_admin_articles') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin_articles' %} active {% endif %}" href="{{ path('app_admin_articles') }}">
             <i class="bi bi-file-earmark-fill"></i>
             &nbsp;Article
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin_commande' %} active {% endif %}" href="{{ path('app_admin_commande') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin_commande' %} active {% endif %}" href="{{ path('app_admin_commande') }}">
             <i class="bi bi-cart-fill"></i>
             &nbsp;Commande
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin_user' %} active {% endif %}" href="{{ path('app_admin_user') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin_user' %} active {% endif %}" href="{{ path('app_admin_user') }}">
             <i class="bi bi-suit-heart-fill"></i>
             &nbsp;Utilisateur
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin_category' %} active {% endif %}" href="{{ path('app_admin_category') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin_category' %} active {% endif %}" href="{{ path('app_admin_category') }}">
             <i class="bi bi-diagram-2-fill"></i>
             &nbsp;Category
             </a>
@@ -112,31 +112,31 @@
         <hr>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin_articles_add' %} active {% endif %}" href="{{ path('app_admin_articles_add') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin_articles_add' %} active {% endif %}" href="{{ path('app_admin_articles_add') }}">
             <i class="bi bi-file-earmark-plus-fill"></i>
             &nbsp;Nouvel Article
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if route_name == 'app_admin_category_add' %} active {% endif %}" href="{{ path('app_admin_category_add') }}">
+            <a class="nav-link hoverblue {% if route_name == 'app_admin_category_add' %} active {% endif %}" href="{{ path('app_admin_category_add') }}">
             <i class="bi bi-node-plus-fill"></i>
             &nbsp;Nouvel Category
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_profil') }}">
+            <a class="nav-link hoververt" href="{{ path('app_profil') }}">
             <i class="bi bi-person-badge-fill"></i>
             &nbsp;Profil
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('index') }}">
+            <a class="nav-link hoverred" href="{{ path('index') }}">
             <i class="bi bi-door-open-fill"></i>
             &nbsp;Quitter
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_logout') }}">
+            <a class="nav-link hoverred" href="{{ path('app_logout') }}">
             <i class="bi bi-flag-fill"></i>
             &nbsp;Déconnexion
             </a>
