--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    Shop | ARYHA paris
+    ARYHA paris | Shop
 {% endblock %}
 {% block body %}
 {% set route_name = app.request.attributes.get('_route') %}
