--- a/templates/cart/validation.html.twig
+++ b/templates/cart/validation.html.twig
@@ -4,12 +4,14 @@
     ARYHA paris | Validation
 {% endblock %}
 {% block body %}
-<pre>
+{# <pre>
     {{ dump(app.user) }}
-</pre>
-<div class="container text-center">
-    <h1 class="">Votre commande est bien validé et envoyé !</h1>
+</pre> #}
+<div class="container text-center mt-5">
+    <h1 class="">La commande n°{{ commande.0.id }} est bien prise en compte !</h1>
     <h2 class="">Félicitation <strong class="hiv">{{ app.user.nom }}</strong>  <strong class="huv">{{ app.user.prenom }}</strong> pour votre commande !</h2>
+    <h3>Vous recevrez dans un instant le récapitulatif de votre commande par mail</h3>
+    <a href="{{ path('home')}}" class="btn btn-outline-dark my-5 col-6">Retour sur la boutique</a>
 </div>
 
 {% endblock %}
