--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -46,14 +46,19 @@
                                 <a href="{{ path('delete_panier', {'id': element.article.id}) }}" class="btn btn-danger"><i class="bi bi-cart-x"></i></a>                        
                             </td>
                         </tr>
+                        {% if promo != 0 %}
+                            <tr class="text-danger">
+                                <td colspan="5">Code Promo</td>
+                                <td colspan="1" class="text-end"> {{ codepro }} €</td>
+                            </tr>
+                        {% endif %}
                     {% endfor %}
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="3">Total</td>
-                        {# <td></td> #}
-                        <td colspan class="text-end">{{ total }} €</td>
-                        <td colspan="3" class="text-end">
+                        <td colspan="5">Total</td>
+                        <td colspan="1" class="text-end">{{ total }} €</td>
+                        <td colspan="1" class="text-end">
                             Vider le panier <a href="{{ path('delete_all_panier') }}" class="btn btn-danger"><i class="bi bi-cart-x"></i></a>
                         </td>
                     </tr>
