--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,7 +65,7 @@
         </footer>
         
         {% block javascripts %}
-    
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
